force-app/main/default/objects/LLC_BI__Titled_Property_Details__c/fields/LLC_BI__Fuel_Type__c.field-meta.xml
<CustomField>
    <fullName>LLC_BI__Fuel_Type__c</fullName>
    <description>Users populate this optional field to indicate the fuel system of the vehicle.</description>
    <inlineHelpText>Select the type of fuel used for the vehicle.</inlineHelpText>
    <label>Fuel Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Diesel</fullName>
            </value>
            <value>
                <fullName>Gasoline</fullName>
            </value>
            <value>
                <fullName>Ethanol</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>