force-app/main/default/objects/LLC_BI__Titled_Property_Details__c/fields/LLC_BI__Has_Passed_State_Inspection__c.field-meta.xml
<CustomField>
    <fullName>LLC_BI__Has_Passed_State_Inspection__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Users select this checkbox if the piece of collateral has passed the applicable state or province inspection. By default, it is false.</description>
    <inlineHelpText>Select this checkbox if the piece of collateral has passed the applicable state or province inspection.</inlineHelpText>
    <label>Has Passed State Inspection</label>
    <type>Checkbox</type>
</CustomField>