force-app/main/default/objects/LLC_BI__Titled_Property_Details__c/fields/LLC_BI__Is_Recreational__c.field-meta.xml
<CustomField>
    <fullName>LLC_BI__Is_Recreational__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Users select this optional checkbox if the piece of collateral is used for recreational purposes. By default, it is false.</description>
    <inlineHelpText>Select this checkbox if the piece of collateral is used for recreational purposes.</inlineHelpText>
    <label>Is Recreational</label>
    <type>Checkbox</type>
</CustomField>