force-app/main/default/objects/LLC_BI__Titled_Property_Details__c/fields/LLC_BI__Transmission_Type__c.field-meta.xml
<CustomField>
    <fullName>LLC_BI__Transmission_Type__c</fullName>
    <description>Users populate this optional field to indicate the transmission type of the vehicle.</description>
    <inlineHelpText>Select the type of transmission that applies to the vehicle.</inlineHelpText>
    <label>Transmission Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Manual</fullName>
            </value>
            <value>
                <fullName>Automatic</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>